# aura-rcss-codebase

./: .gitignore  Makefile  config.status
src/: 20190822123729-null-vs-null.rcg  20190822123818-null-vs-null.rcg  20190822123827-HELIOS2018_0-vs-HELIOS_base_0.rcg  20190822123827-HELIOS2018_0-vs-HELIOS_base_0.rcl  Makefile  Makefile.am  Makefile.in  cafe_model.cpp  cafe_model.h  coach.conf  err.txt  main_player.cpp  player.conf  sample_coach  sample_field_evaluator.cpp  sample_player.cpp  sample_player.h  sample_trainer  start.sh  start.sh.in  strategy.cpp  strategy.h
src/.deps/: sample_player-cafe_model.Po  sample_player-keepaway_communication.Po  sample_player-main_player.Po  sample_player-sample_communication.Po  sample_player-sample_field_evaluator.Po  sample_player-sample_player.Po  sample_player-strategy.Po
src/actions/.deps/: sample_player-neck_default_intercept_neck.Po  sample_player-neck_goalie_turn_neck.Po  sample_player-neck_offensive_intercept_neck.Po  sample_player-view_tactical.Po
src/behaviours/: bhv_basic_move.cpp  bhv_block.cpp  bhv_block.h  bhv_defensive_positioning.cpp  bhv_defensive_positioning.h  bhv_defhalf_positioning.cpp  bhv_defhalf_positioning.h  bhv_goalie_basic_move.cpp  bhv_goalie_chase_ball.cpp  bhv_intercept.cpp  bhv_mark.cpp  bhv_mark.h  bhv_mark_deep.cpp  bhv_mark_deep.h  bhv_mark_man.cpp  bhv_mark_man.h  bhv_mark_zone.cpp  bhv_penalty_kick.cpp  bhv_set_play.cpp  bhv_set_play_free_kick.cpp  bhv_set_play_goal_kick.cpp  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_kick_in.cpp  bhv_set_play_kick_off.cpp  bhv_their_goal_kick_move.cpp
src/behaviours/.deps/: sample_player-bhv_basic_move.Po  sample_player-bhv_basic_offensive_kick.Po  sample_player-bhv_basic_tackle.Po  sample_player-bhv_block.Po  sample_player-bhv_custom_before_kick_off.Po  sample_player-bhv_defensive_positioning.Po  sample_player-bhv_defhalf_positioning.Po  sample_player-bhv_go_to_static_ball.Po  sample_player-bhv_goalie_basic_move.Po  sample_player-bhv_goalie_chase_ball.Po  sample_player-bhv_goalie_free_kick.Po  sample_player-bhv_intercept.Po  sample_player-bhv_mark.Po  sample_player-bhv_mark_deep.Po  sample_player-bhv_mark_man.Po  sample_player-bhv_mark_zone.Po  sample_player-bhv_offensive_positioning.Po  sample_player-bhv_penalty_kick.Po  sample_player-bhv_prepare_set_play_kick.Po  sample_player-bhv_set_play.Po  sample_player-bhv_set_play_free_kick.Po  sample_player-bhv_set_play_goal_kick.Po  sample_player-bhv_set_play_indirect_free_kick.Po  sample_player-bhv_set_play_kick_in.Po  sample_player-bhv_set_play_kick_off.Po  sample_player-bhv_their_goal_kick_move.Po
src/behaviours/defense/: bhv_block.cpp  bhv_defensive_positioning.cpp  bhv_defensive_positioning.h  bhv_intercept.cpp  bhv_intercept.h  bhv_mark_deep.cpp  bhv_mark_man.cpp  bhv_mark_zone.cpp  bhv_mark_zone.h
src/behaviours/defense/.deps/: sample_player-bhv_basic_tackle.Po  sample_player-bhv_block.Po  sample_player-bhv_defensive_positioning.Po  sample_player-bhv_defhalf_positioning.Po  sample_player-bhv_mark_man.Po  (+3 more)
src/behaviours/offense/: bhv_offensive_positioning.cpp  bhv_offensive_positioning.h  bhv_pass_position.cpp  bhv_pass_position.h  bhv_shoot.cpp  bhv_shoot.h
src/chain_action/: actgen_area_pass.cpp  actgen_area_pass.h  actgen_deep_pass.cpp  actgen_deep_pass.h  actgen_deg_pass.cpp  actgen_deg_pass.h  actgen_short_pass.cpp  actgen_short_pass.h  action_chain_graph.cpp  bhv_pass_kick_find_receiver.cpp  field_analyzer.cpp  neck_turn_to_receiver.cpp  pass.cpp  pass.h  predict_state.h  self_pass_generator.cpp  short_dribble_generator.cpp
src/chain_action/.deps/: sample_player-actgen_area_pass.Po  sample_player-actgen_cross.Po  sample_player-actgen_deep_pass.Po  sample_player-actgen_deg_pass.Po  sample_player-actgen_direct_pass.Po  sample_player-actgen_self_pass.Po  sample_player-actgen_shoot.Po  sample_player-actgen_short_dribble.Po  sample_player-actgen_short_pass.Po  sample_player-actgen_simple_dribble.Po  sample_player-actgen_strict_check_pass.Po  sample_player-action_chain_graph.Po  sample_player-action_chain_holder.Po  sample_player-bhv_chain_action.Po  sample_player-bhv_normal_dribble.Po  sample_player-bhv_pass_kick_find_receiver.Po  sample_player-neck_turn_to_receiver.Po  sample_player-shoot_generator.Po
src/communication/: intention_receive.cpp  keepaway_communication.cpp  sample_communication.cpp
src/communication/.deps/: sample_player-intention_receive.Po  sample_player-intention_wait_after_set_play_kick.Po  sample_player-keepaway_communication.Po  sample_player-sample_communication.Po
src/formations-dt/: DefPos_4D_GK.conf  OffensePositioning_no3_al.conf  defense-formation.conf  setplay-our-formation.conf
src/roles/: role_center_back.cpp  role_center_forward.cpp  role_defensive_half.cpp  role_goalie.cpp  role_keepaway_keeper.cpp  role_offensive_half.cpp  role_sample.cpp  role_side_back.cpp  role_side_forward.cpp  role_side_half.cpp
src/roles/.deps/: sample_player-role_center_back.Po  sample_player-role_center_forward.Po  sample_player-role_defensive_half.Po  sample_player-role_goalie.Po  sample_player-role_keepaway_keeper.Po  sample_player-role_keepaway_taker.Po  sample_player-role_offensive_half.Po  sample_player-role_sample.Po  sample_player-role_side_back.Po  sample_player-role_side_forward.Po  sample_player-role_side_half.Po  sample_player-soccer_role.Po
src/utils/: HERMES_FastIC.cpp  algo_utils.cpp  algo_utils.h  geoUtils.cpp  geoUtils.h  geo_utils.cpp  geo_utils.h  rcsc_utils.cpp  rcsc_utils.h  utils.cpp
src/utils/.deps/: sample_player-HERMES_FastIC.Po  sample_player-algo_utils.Po  sample_player-geoUtils.Po  sample_player-geo_utils.Po  sample_player-rcsc_utils.Po  sample_player-utils.Po
src/utils/algorithms/: hungarian.cpp  hungarian.h
src/utils/allocators/: area_pass_generator.cpp  area_pass_generator.h  deep_pass_generator.cpp  deep_pass_generator.h  markTargetAllocator.cpp  markTargetAllocator.h  mark_target_allocator.cpp  mark_target_allocator.h  player_relationship.cpp  player_relationship.h
src/utils/estimators/: HERMES_FastIC.h  player_estimator.cpp  player_estimator.h
(+14 files in other folders)
